# ros2_pose_image_annotation

./: README.md  package.xml  setup.cfg  setup.py
launch/: pose_image_annotation_launch.py
ros2_pose_image_annotation/: annotate_node.py  filter_node  image_publisher.py  pose_publisher.py
