<?xml version="1.0"?>
<package format="3">
  <name>ros2_pose_image_annotation</name>
  <version>0.1.0</version>
  <description>ROS2 pose and image annotation nodes</description>
  <maintainer email="neo@example.com">neo</maintainer>
  <license>Apache-2.0</license>

  <!-- Build type -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>ros_gz_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
